Resolved all the remaining warnings in the app